[package]
name = "testbed_callback"
version = "0.1.0"
authors = ["Vrixyz <tom.kahl@hotmail.fr>"]

[dependencies]
nalgebra = "0.16"
ncollide2d = "0.17"
nphysics2d = { git = "https://github.com/Vrixyz/nphysics", branch = "131-refcell-world" }
nphysics_testbed2d = { git = "https://github.com/Vrixyz/nphysics", branch = "131-refcell-world" }
specs = "0.12.1"